--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,20 @@
     ],
     "require": {
         "php": ">=5.6.4",
+        "ext-phalcon": "^3.0",
         "michele-angioni/phalcon-repositories": "^0.2.0"
     },
     "require-dev": {
-        "ext-phalcon": "^3.0"
+        "phalcon/incubator": "^3.0.4"
     },
     "autoload": {
         "psr-4": {
             "Aizxin\\": "app/"
         }
     },
-    "repositories": {
-        "packagist": {
-            "type": "composer",
-            "url": "https://packagist.phpcomposer.com"
-        }
+    "scripts": {
+        "post-create-project-cmd": [
+            "php -r \"copy('.env.example', '.env');\""
+        ]
     }
 }
