--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ APP_DEBUG=false
 
 DB_CONNECTION=Mysql
 DB_HOST=127.0.0.1
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=secret
+DB_USERNAME=secret
+DB_PASSWORD=secret
 DB_PORT=3306
 
 
@@ -14,4 +14,4 @@ SESSION_DRIVER=file
 
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
-REDIS_PREFIX=
+REDIS_PREFIX=secret
