--- a/config/config.ini
+++ b/config/config.ini
@@ -3,7 +3,7 @@ adapter  = Mysql
 host     = "127.0.0.1"
 username = "root"
 password = "root"
-dbname   = "phalconrbac"
+dbname   = "phalblog"
 
 [application]
 controllersDir = "app/controllers/"
