--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "php": ">=5.6.4",
         "ext-phalcon": "^3.0",
-        "michele-angioni/phalcon-repositories": "^0.2.0"
+        "michele-angioni/phalcon-repositories": "^0.2.0",
+        "aizxin/roles":"dev-master"
     },
     "autoload": {
         "psr-4": {
