--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "php": ">=5.6.4",
         "ext-phalcon": "^3.0",
         "michele-angioni/phalcon-repositories": "^0.2.0",
-        "aizxin/roles":"dev-master"
+        "sow/roles":"^1.0"
     },
     "autoload": {
         "psr-4": {
